# fire-escape

./: .cpush.json5  README.md  pyproject.toml
examples/: example1.ffsl
src/fire_escape/: ast_nodes.py  builtins.py  cli.py  codegen.py  codegen_openmp_cpu.py  codegen_upcxx_openmp_cpu.py  error.py  ffsl.lark  grammar.lark  parser.py  scope.py  type_check.py
src/fire_escape/templates/: __init__.py  openmp-cpu.jinja  openmp.jinja  upcxx-openmp-cpu.jinja
